# poly_algebra

./: .gitignore  Cargo.toml  README.md  algorithms.md  scenes.db
frontend/: package-lock.json  package.json
frontend/src/: ActionRibbon.css  ActionRibbon.tsx  App.css  App.tsx  CanvasPointLayer.tsx  ConfirmationModal.css  ConfirmationModal.tsx  Legend.css  Legend.tsx  SceneCanvas.tsx  SceneManagementModal.css  SceneManagementModal.tsx  Stage.tsx  actionIcons.tsx  enums.tsx  types.ts  utils.tsx
frontend/src/shapes/: BaseShape.tsx  CanvasComponents.tsx  ComputedPointShape.tsx  FixedPointShape.tsx  FreePointShape.tsx  InitialPointShape.tsx  (+18 more)
migrations/: 20240320000000_create_tables.sql  20240321000000_add_view_to_scenes.sql  20240322000000_add_name_to_scenes.sql
scripts/: add_circle_def.ps1  add_freepoint.ps1  create_scene.ps1  generate_plot_colors.py  init_db.ps1
src/: conventions.txt  db.rs  elimination.rs  fint.rs  gp_pari_service.rs  lib.rs  main.rs  modular_poly.rs  poly.rs  poly_draw.rs  scene.rs  scene_object.rs  scene_utils.rs  service.rs  types.ts  x_poly.rs
src/db/: scene.rs  scene_object.rs
src/poly/: poly_conversion.rs  poly_operations.rs
src/py/: equation_processor.py
src/scene_object/: computed_point.rs  fixed_point.rs  free_point.rs  intersection_point.rs  invariant.rs  line_ab.rs  locus.rs  midpoint.rs  pl_to_line.rs  point_to_line_distance_invariant.rs  pp_bisector.rs  pp_to_line.rs  projection.rs  reflection.rs  scaled_vector_point.rs  sliding_point.rs  two_line_angle_invariant.rs  two_point_distance_invariant.rs
src/tests/: scenes_test.rs
(+1 files in other folders)
