[package]
name = "poly_algebra"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A program for eliminating variables from multivariate polynomials"

[dependencies]
serde_json = "1.0"
thiserror = "1.0"
sea-orm = { version = "0.12", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "macros",
    "with-chrono",
] }
tokio = { version = "1.0", features = ["full"] }
async-std = { version = "1.0", features = ["attributes"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
indexmap = "2.9.0"
float_next_after = "1.0.0"
hashbrown = "0.15.2"
approx = "0.5.1"
rand = "0.9.1"
env_logger = "0.10"
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] }
actix-cors = "0.7.1"
regex = "1.0"
gcd = "2.3.0"
clap = { version = "4.0", features = ["derive"] }
base64 = "0.21"

[dev-dependencies]
test-log = "0.2"
once_cell = "1.19"
ctor = "0.2"
